syntax = "proto3";

option go_package = ".;pb";
package pb;

message RelationActionRequest{
  int64 userID = 1;
  int64 followID = 2;
  int32 ActionType = 3; //1-关注 2-取消关注
}
message RelationActionResponse{}
message RelationFollowListRequest{
  int64 userID = 1;
}
message RelationFollowListResponse{
  repeated int64 followIDList = 1;
}
message RelationFollowerListRequest{
  int64 userID = 1;
}
message RelationFollowerListResponse{
  repeated int64 followerIDList = 1;
}

service RelationService{
  rpc Action(RelationActionRequest) returns (RelationActionResponse);
  rpc FollowList(RelationFollowListRequest) returns (RelationFollowListResponse);
  rpc FollowerList(RelationFollowerListRequest) returns(RelationFollowerListResponse);
}